--- a/FusionIIIT/templates/establishment/hr1_form.html
+++ b/FusionIIIT/templates/establishment/hr1_form.html
@@ -25,7 +25,7 @@
         
         {% comment %}The central-rail segment ends here!{% endcomment %}
         <div class="eight wide column">
-            <a href="/establishment/"> Back</a>
+            <a href="/eis/profile/"> Back</a>
                <!--{% block cpda %}-->
                {% if cpda %}
                     {% if admin %}
