--- a/FusionIIIT/templates/establishment/ltc_admin.html
+++ b/FusionIIIT/templates/establishment/ltc_admin.html
@@ -131,7 +131,7 @@ pending ltc applications
                                     </div>
                                     <br>
                                     <div class="field">
-                                        {% render_field app.assign_form.reviewer_design3 %}
+                                        {% render_field app.assign_form.reviewer_design %}
                                     </div>
                                     <br>
                                     <div class="field">
@@ -139,7 +139,7 @@ pending ltc applications
                                     </div>
                                     <br>
                                     <button type="submit" name="ltc_assign_form" class="ui large primary button">
-                                        Assign Reviewer
+                                        Submit
                                     </button>
                                 </form>
                             </div>
@@ -350,7 +350,7 @@ under_review ltc applications
                                     </div>
                                     <br>
                                     <div class="field">
-                                        {% render_field app.assign_form.reviewer_design3 %}
+                                        {% render_field app.assign_form.reviewer_design %}
                                     </div>
                                     <br>
                                     <div class="field">
@@ -358,7 +358,7 @@ under_review ltc applications
                                     </div>
                                     <br>
                                     <button type="submit" name="ltc_assign_form" class="ui large primary button">
-                                        Assign Reviewer
+                                        Submit
                                     </button>
                                 </form>
                             </div>
@@ -394,7 +394,7 @@ reviewed ltc applications
                             <div class="meta"> Remarks by Reviewer : {{app.tracking_info.remarks}}</div>
                             <div>
                                 <button class="ui large primary button" onclick="$('.ui.modal.assign_ltc-{{app.id}}').modal('show')">
-                                    Approve/Reject
+                                    View
                                 </button>
                             </div>
                         </div>
@@ -480,11 +480,20 @@ reviewed ltc applications
                                     {% render_field app.assign_form.app_id %}
 
                                     <div class="field">
-                                        Remarks from Director : {{ app.tracking_info.remarks }}
+                                        Remarks from {{ app.tracking_info.reviewer_design }} : {{ app.tracking_info.remarks }}
+                                    </div>
+
+                                    <br>
+                                    <div class="field">
+                                        {% render_field app.assign_form.reviewer_id %}
                                     </div>
                                     <br>
                                     <div class="field">
-                                        {% render_field app.assign_form.accept_status%}
+                                        {% render_field app.assign_form.reviewer_design %}
+                                    </div>
+                                    <br>
+                                    <div class="field">
+                                        {% render_field app.assign_form.assign_status%}
                                     </div>
                                     <br>
                                     <div class="field">
@@ -492,7 +501,7 @@ reviewed ltc applications
                                     </div>
                                     <br>
                                     <button type="submit" name="ltc_assign_form" class="ui large primary button">
-                                        Approve/Reject
+                                        Submit
                                     </button>
                                 </form>
                             </div>
