--- a/FusionIIIT/templates/establishment/cpda_admin.html
+++ b/FusionIIIT/templates/establishment/cpda_admin.html
@@ -64,7 +64,18 @@ pending cpda applications
                                     <br>
                                     {% if app.tracking_info.review_status == 'to_assign' %}
                                     {% else %}
-                                        <label>Remarks from {{app.tracking_info.reviewer_design}}  : {{app.tracking_info.remarks_rev1}}</label><br>
+                                        {% for key, value in remarks_list.items %}    
+                                        {% if key == app %}
+                                            {% for x in value %}
+                                            Remarks from 
+                                            {% for y in x %}
+                                            {{y}}&emsp; &emsp;
+                                            {% endfor %}
+                                            <br>             
+                                            {% endfor %}
+                                            {%endif%}
+                                        {% endfor %}
+                                        
                                         <br>
                                     {% endif %}
                                     <div class="field">
@@ -144,9 +155,8 @@ under_review cpda applications
                                 <label>PF Number : {{ app.pf_number }}</label><br>
                                 <label>Requested Advance : {{ app.requested_advance }}</label><br>
                                 <label>Purpose : {{ app.purpose }}</label><br>
-                                <label>Reviewer1 : {{app.tracking_info.reviewer_id.first_name}}</label><br>
-                                <label>Reviewer2 : {{app.tracking_info.reviewer_id2.first_name}}</label><br>
-                                <label>Reviewer3 : {{app.tracking_info.reviewer_id3.first_name}}</label><br>
+                                <label>Assigned to : {{app.tracking_info.reviewer_id.first_name}}</label><br>
+                                
                                 {% if app.status == 'finished' %}
                                     <label>Adjustment Amount : {{ app.adjustment_amount }}</label><br>
                                     <label>No. of Bills : {{ app.bills_attached }}</label><br>
