--- a/FusionIIIT/templates/establishment/appraisal_hod.html
+++ b/FusionIIIT/templates/establishment/appraisal_hod.html
@@ -1237,10 +1237,14 @@
                               <label><strong>Remarks:</strong></label>
                               <textarea name="remarks_hod" rows="2" cols="30"></textarea><br><br>
                               <label><strong>Please select your result:</strong></label><br>
-                              <input type="radio" id="accepted" name="result" value="accepted">
-                              <label for="accepted">ACCEPT</label><br>
-                              <input type="radio" id="rejected" name="result" value="rejected">
-                              <label for="reject">REJECT</label><br><br><br>
+                              <input type="radio" id="outstanding" name="result" value="outstanding">
+                              <label for="outstanding">Outstanding</label><br>
+                              <input type="radio" id="excellent" name="result" value="excellent">
+                              <label for="excellent">Excellent</label><br>
+                              <input type="radio" id="good" name="result" value="good">
+                              <label for="good">Good</label><br>
+                              <input type="radio" id="poor" name="result" value="poor">
+                              <label for="poor">Poor</label><br><br><br>
                               <button type="submit" name="hod_appraisal_review" class="ui large primary button">
                                   Submit Request
                               </button>
